tests/typing/bad/testfile-duplicate-1.hs
main = case [] of {
  [] -> return ();
  x : x -> return () }
